--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
+    "mariadb": "^3.2.2",
     "morgan": "~1.9.1",
+    "passport": "^0.6.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
